--- a/css/compiledstyle.css
+++ b/css/compiledstyle.css
@@ -15876,7 +15876,7 @@ hr {
 }
 .button-regular.beautifuldiscord {
 	background: #6e86d5;
-	border: 2px solid #6386D5;
+	border: 2px solid #6e86d5;
 }
 .button-regular.beautifuldiscord::after {
 	color: #6e86d5;
