--- a/css/compiledstyle.css
+++ b/css/compiledstyle.css
@@ -16002,7 +16002,10 @@ hr {
     position: absolute;
     top: 30%;
 }
-
+.theme-image {
+    height: 100%;
+    width: 100%;
+}
 
 
 /*-- ===================================================== --*
