--- a/css/compiledstyle.css
+++ b/css/compiledstyle.css
@@ -11858,246 +11858,234 @@ transform: scale(1.5);
 	min-height: 150px;
 	background: url(AjaxLoader.gif) no-repeat center center
 }
-/**
- * fullPage 2.4.6
+/*!
+ * fullPage 2.9.4
  * https://github.com/alvarotrigo/fullPage.js
  * MIT licensed
  *
  * Copyright (C) 2013 alvarotrigo.com - A project by Alvaro Trigo
  */
-html, body {
-	margin: 0;
-	padding: 0;
-	overflow: hidden;
-	/*-- Avoid flicker on slides transitions for mobile phones #336 --*/
-	-webkit-tap-highlight-color: rgba(0,0,0,0);
+html.fp-enabled,
+.fp-enabled body {
+    margin: 0;
+    padding: 0;
+    overflow:hidden;
+
+    /*Avoid flicker on slides transitions for mobile phones #336 */
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
 }
 #superContainer {
-	height: 100%;
-	position: relative;
-	/* Touch detection for Windows 8 */
-	-ms-touch-action: none;
-	/* IE 11 on Windows Phone 8.1*/
-	touch-action: none;
+    height: 100%;
+    position: relative;
+
+    /* Touch detection for Windows 8 */
+    -ms-touch-action: none;
+
+    /* IE 11 on Windows Phone 8.1*/
+    touch-action: none;
 }
 .fp-section {
-	position: relative;
-	-webkit-box-sizing: border-box; /* Safari<=5 Android<=3 */
-	-moz-box-sizing: border-box; /* <=28 */
-	box-sizing: border-box;
+    position: relative;
+    -webkit-box-sizing: border-box; /* Safari<=5 Android<=3 */
+    -moz-box-sizing: border-box; /* <=28 */
+    box-sizing: border-box;
 }
 .fp-slide {
-	float: left;
+    float: left;
 }
 .fp-slide, .fp-slidesContainer {
-	height: 100%;
-	display: block;
+    height: 100%;
+    display: block;
 }
 .fp-slides {
-	z-index: 1;
-	height: 100%;
-	overflow: hidden;
-	position: relative;
-	-webkit-transition: all 0.3s ease-out; /* Safari<=6 Android<=4.3 */
-	transition: all 0.3s ease-out;
+    z-index:1;
+    height: 100%;
+    overflow: hidden;
+    position: relative;
+    -webkit-transition: all 0.3s ease-out; /* Safari<=6 Android<=4.3 */
+    transition: all 0.3s ease-out;
 }
 .fp-section.fp-table, .fp-slide.fp-table {
-	display: table;
-	table-layout: fixed;
-	width: 100%;
+    display: table;
+    table-layout:fixed;
+    width: 100%;
 }
 .fp-tableCell {
-	display: table-cell;
-	vertical-align: middle;
-	width: 100%;
-	height: 100%;
+    display: table-cell;
+    vertical-align: middle;
+    width: 100%;
+    height: 100%;
 }
 .fp-slidesContainer {
-	float: left;
-	position: relative;
+    float: left;
+    position: relative;
 }
 .fp-controlArrow {
-	position: absolute;
-	z-index: 4;
-	top: 50%;
-	cursor: pointer;
-	width: 0;
-	height: 0;
-	border-style: solid;
-	margin-top: -38px;
+    -webkit-user-select: none; /* webkit (safari, chrome) browsers */
+    -moz-user-select: none; /* mozilla browsers */
+    -khtml-user-select: none; /* webkit (konqueror) browsers */
+    -ms-user-select: none; /* IE10+ */
+    position: absolute;
+    z-index: 4;
+    top: 50%;
+    cursor: pointer;
+    width: 0;
+    height: 0;
+    border-style: solid;
+    margin-top: -38px;
+    -webkit-transform: translate3d(0,0,0);
+    -ms-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
 .fp-controlArrow.fp-prev {
-	left: 15px;
-	width: 0;
-	border-width: 38.5px 34px 38.5px 0;
-	border-color: transparent #fff transparent transparent;
+    left: 15px;
+    width: 0;
+    border-width: 38.5px 34px 38.5px 0;
+    border-color: transparent #fff transparent transparent;
 }
 .fp-controlArrow.fp-next {
-	right: 15px;
-	border-width: 38.5px 0 38.5px 34px;
-	border-color: transparent transparent transparent #fff;
+    right: 15px;
+    border-width: 38.5px 0 38.5px 34px;
+    border-color: transparent transparent transparent #fff;
 }
 .fp-scrollable {
-	overflow: scroll;
+    overflow: hidden;
+    position: relative;
+}
+.fp-scroller{
+    overflow: hidden;
+}
+.iScrollIndicator{
+    border: 0 !important;
 }
 .fp-notransition {
-	-webkit-transition: none !important;
-	transition: none !important;
+    -webkit-transition: none !important;
+    transition: none !important;
 }
 #fp-nav {
-	position: fixed;
-	z-index: 2;
-	margin-top: -32px;
-	top: 50%;
-	opacity: 1;
-	visibility: hidden;
-	-webkit-animation-duration: 1s;
-	animation-duration: 1s;
-	-webkit-animation-fill-mode: both;
-	animation-fill-mode: both;
-	transition: all 0.8s ease;
-	-webkit-transition: all 0.8s ease;
-	-moz-transition: all 0.8s ease;
-	-o-transition: all 0.8s ease;
-	-ms-transition: all 0.8s ease;
+    position: fixed;
+    z-index: 100;
+    margin-top: -32px;
+    top: 50%;
+    opacity: 1;
+    -webkit-transform: translate3d(0,0,0);
 }
 #fp-nav.right {
-	right: 65px;
-}
-#fp-nav.right.move-right {
-	right: -385px;
+    right: 17px;
 }
 #fp-nav.left {
-	left: 17px;
+    left: 17px;
 }
-.fp-slidesNav {
-	position: absolute;
-	z-index: 4;
-	left: 50%;
-	opacity: 1;
+.fp-slidesNav{
+    position: absolute;
+    z-index: 4;
+    left: 50%;
+    opacity: 1;
+    -webkit-transform: translate3d(0,0,0);
+    -ms-transform: translate3d(0,0,0);
+    transform: translate3d(0,0,0);
 }
 .fp-slidesNav.bottom {
-	bottom: 17px;
+    bottom: 17px;
 }
 .fp-slidesNav.top {
-	top: 17px;
+    top: 17px;
 }
-#fp-nav ul, .fp-slidesNav ul {
-	margin: 0;
-	padding: 0;
+#fp-nav ul,
+.fp-slidesNav ul {
+  margin: 0;
+  padding: 0;
 }
-#fp-nav ul li, .fp-slidesNav ul li {
-	display: block;
-	width: 14px;
-	height: 13px;
-	margin: 40px 0px;
-	position: relative;
+#fp-nav ul li,
+.fp-slidesNav ul li {
+    display: block;
+    width: 14px;
+    height: 13px;
+    margin: 7px;
+    position:relative;
 }
 .fp-slidesNav ul li {
-	display: inline-block;
+    display: inline-block;
 }
-#fp-nav ul li a, .fp-slidesNav ul li a {
-	display: block;
-	position: relative;
-	margin: 8px 0;
-	z-index: 1;
-	cursor: pointer;
-	text-decoration: none;
-	width: 0;
-	height: 0;
-	border-style: solid;
-	border-width: 0 10px 18px 10px;
-	border-color: transparent transparent white transparent;
-	transform: scale(1, 1);
-	-moz-transform: scale(1, 1);
-	-webkit-transform: scale(1, 1);
-	-o-transform: scale(1, 1);
-	-ms-transform: scale(1, 1);
+#fp-nav ul li a,
+.fp-slidesNav ul li a {
+    display: block;
+    position: relative;
+    z-index: 1;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    text-decoration: none;
 }
-#fp-nav ul li a::before {
-	content: '';
-	display: inline-block;
-	position: absolute;
-	left: -20px;
-	top: -10px;
-	width: 40px;
-	height: 40px;
-	border-radius: 50%;
-	-moz-border-radius: 50%;
-	-webkit-border-radius: 50%;
-	-ms-border-radius: 50%;
-	-o-border-radius: 50%;
-	border: 2px solid white;
-	transform: scale(0.2, 0.2);
-	-moz-transform: scale(0.2, 0.2);
-	-webkit-transform: scale(0.2, 0.2);
-	-o-transform: scale(0.2, 0.2);
-	-ms-transform: scale(0.2, 0.2);
-	opacity: 0;
+#fp-nav ul li a.active span,
+.fp-slidesNav ul li a.active span,
+#fp-nav ul li:hover a.active span,
+.fp-slidesNav ul li:hover a.active span{
+    height: 12px;
+    width: 12px;
+    margin: -6px 0 0 -6px;
+    border-radius: 100%;
+ }
+#fp-nav ul li a span,
+.fp-slidesNav ul li a span {
+    border-radius: 50%;
+    position: absolute;
+    z-index: 1;
+    height: 4px;
+    width: 4px;
+    border: 0;
+    background: #333;
+    left: 50%;
+    top: 50%;
+    margin: -2px 0 0 -2px;
+    -webkit-transition: all 0.1s ease-in-out;
+    -moz-transition: all 0.1s ease-in-out;
+    -o-transition: all 0.1s ease-in-out;
+    transition: all 0.1s ease-in-out;
 }
-#fp-nav ul li a, #fp-nav ul li a::before {
-	transition: all 0.3s ease;
-	-webkit-transition: all 0.3s ease;
-	-moz-transition: all 0.3s ease;
-	-o-transition: all 0.3s ease;
-	-ms-transition: all 0.3s ease;
-}
-#fp-nav ul li a:hover {
-	transform: scale(0.7, 0.7);
-	-moz-transform: scale(0.7, 0.7);
-	-webkit-transform: scale(0.7, 0.7);
-	-o-transform: scale(0.7, 0.7);
-	-ms-transform: scale(0.7, 0.7);
-}
-#fp-nav ul li a:hover::before {
-	opacity: 1;
-	transform: scale(1.4, 1.4);
-	-moz-transform: scale(1.4, 1.4);
-	-webkit-transform: scale(1.4, 1.4);
-	-o-transform: scale(1.4, 1.4);
-	-ms-transform: scale(1.4, 1.4);
-}
-#fp-nav ul li a.active, .fp-slidesNav ul li a.active {
-	transform: scale(0.7, 0.7);
-	-moz-transform: scale(0.7, 0.7);
-	-webkit-transform: scale(0.7, 0.7);
-	-o-transform: scale(0.7, 0.7);
-	-ms-transform: scale(0.7, 0.7);
-}
-#fp-nav ul li a.active::before {
-	opacity: 1;
-	transform: scale(1.4, 1.4);
-	-moz-transform: scale(1.4, 1.4);
-	-webkit-transform: scale(1.4, 1.4);
-	-o-transform: scale(1.4, 1.4);
-	-ms-transform: scale(1.4, 1.4);
+#fp-nav ul li:hover a span,
+.fp-slidesNav ul li:hover a span{
+    width: 10px;
+    height: 10px;
+    margin: -5px 0px 0px -5px;
 }
 #fp-nav ul li .fp-tooltip {
-	position: absolute;
-	top: -2px;
-	padding-right: 5px;
-	color: #fff;
-	font-size: 12px;
-	font-weight: 700;
-	white-space: nowrap;
-	width: auto;
-	overflow: hidden;
-	text-transform: uppercase;
-	display: block;
-	opacity: 0;
-	right: 0px;
-	-webkit-transition: all 0.3s ease;
-	transition: all 0.3s ease;
+    position: absolute;
+    top: -2px;
+    color: #fff;
+    font-size: 14px;
+    font-family: arial, helvetica, sans-serif;
+    white-space: nowrap;
+    max-width: 220px;
+    overflow: hidden;
+    display: block;
+    opacity: 0;
+    width: 0;
+    cursor: pointer;
 }
-#fp-nav ul li a:hover ~ .fp-tooltip, #fp-nav ul li a.active ~ .fp-tooltip {
-	opacity: 1;
-	right: 35px;
+#fp-nav ul li:hover .fp-tooltip,
+#fp-nav.fp-show-active a.active + .fp-tooltip {
+    -webkit-transition: opacity 0.2s ease-in;
+    transition: opacity 0.2s ease-in;
+    width: auto;
+    opacity: 1;
 }
 #fp-nav ul li .fp-tooltip.right {
-	top: 2px;
+    right: 20px;
 }
 #fp-nav ul li .fp-tooltip.left {
-	left: 20px;
+    left: 20px;
+}
+.fp-auto-height.fp-section,
+.fp-auto-height .fp-slide,
+.fp-auto-height .fp-tableCell{
+    height: auto !important;
+}
+
+.fp-responsive .fp-auto-height-responsive.fp-section,
+.fp-responsive .fp-auto-height-responsive .fp-slide,
+.fp-responsive .fp-auto-height-responsive .fp-tableCell {
+    height: auto !important;
 }
 .wordsrotator_words {
 	display: inline-block;
