--- a/css/mrsrobot.css
+++ b/css/mrsrobot.css
@@ -422,7 +422,7 @@ footer {
     height: 44px;
     margin-top: -9px;
     margin-left: -8px;
-    background-image: url(/images/logotrans.png);
+    background-image: url(https://discordbots.org/images/logotrans.png);
     border: 2px solid #9a58b5;
     background-size: 70%;
     background-position: 6px 2px;
