--- a/css/mrsrobot.css
+++ b/css/mrsrobot.css
@@ -478,3 +478,23 @@ hr.purp-line {
 		width: 16%;
 	}
 }
+
+.ui.label.purple {
+	display: initial !important;
+	border-radius: 50%;
+	font-size: 3px;
+	color: transparent !important;
+	padding-top: 11px;
+	margin-top: -81px !important;
+	position: absolute;
+	margin-left: 28px;
+	border: 2px solid #8423a5 !important;
+	-webkit-animation-name: Floatingx;
+	-webkit-animation-duration: 3s;
+	-webkit-animation-iteration-count: infinite;
+	-webkit-animation-timing-function: ease-in-out;
+	-moz-animation-name: Floating;
+	-moz-animation-duration: 3s;
+	-moz-animation-iteration-count: infinite;
+	-moz-animation-timing-function: ease-in-out;
+}
